--- a/world-quiz/Jenkinsfile
+++ b/world-quiz/Jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
     stage('Clone repository') {
       steps {
           echo "Cloning the repository..."
-          checkout scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[credentialsId: 'jenkins-github', url: 'https://github.com/chineduanunobi/world-quiz.git']])
+          checkout scmGit(branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[credentialsId: 'jenkins-github', url: 'https://github.com/chineduanunobi/world-quiz.git']])
                     //git branch: 'main', url: 'https://github.com/chineduanunobi/WebServer2.git'
           }
       }
