--- a/country-iq-deployment.yaml
+++ b/country-iq-deployment.yaml
@@ -1,4 +1,3 @@
-# React Instance
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,15 +16,14 @@ spec:
     spec:
       containers:
         - name: ciq-test-image
-          image: "ciq-image:v.$BUILD_NUMBER" // This will publish to docker hub .. BUILD_NUMBER is dynamic versioning from Jenkins
+          image: "ciq-image:v.$BUILD_NUMBER" # This will publish to Docker Hub .. BUILD_NUMBER is dynamic versioning from Jenkins
           ports:
             - containerPort: 80
           readinessProbe:
             httpGet:
               path: /index.html
               port: 80
-            initialDelaySeconds: 10
-            periodSeconds: 10
+#          initialDelaySeconds: 10
+#          periodSeconds: 10
 
 
----
