--- a/country-iq-service.yaml
+++ b/country-iq-service.yaml
@@ -2,14 +2,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: test-react-service
+  labels:
+    app: ciq-service
+  name: ciq-service
 spec:
   ports:
     - port: 8080
       protocol: TCP
       targetPort: 80
   selector:
-    app: test-react-service
+    app: ciq-service
   type: LoadBalancer
 status:
   loadBalancer: {}
+
