--- a/country-iq-deployment.yaml
+++ b/country-iq-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: country-quiz-app #The name of the react.js application container
-          image: mecat/country-iq:latest #The Docker image for building the React.js application container
+          image: mecat/country-iq:v.${BUILD_NUMBER} #The Docker image for building the React.js application container
           ports:
             - containerPort: 3000 #The port for the React.js application   container
 #apiVersion: apps/v1
